and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

November 20, 2014, M.Asai (procscore-V10-00-01)
- Coverity fixes.

August 26, 2014, M.Asai (procscore-V10-00-00)
- Introducing G4ParallelWorldProcessStore to allow all the
  G4ParallelWorldProcess objects of all threads could update their
  corresponding world volumes when the entire geometry has been
  destroyed and rebuilt from scratch.

November 18, 2013, M.Asai (procscore-V09-06-03)
- Remove unnecessary G4cout.

May 28, 2013, M.Asai (procscore-V09-06-02)
- Tests migrated to multi-thread.

March 17, 2013, M.Asai (procscore-V09-06-01)
- G4ParallelWorldProcess now sets G4Navigator::SetPushVerbosity(false)
  for the navigator of the mass world to reduce the warning message
  GeomNav1002.

March 27, 2013, M.Asai (procscore-V09-06-00)
- G4ParallelWorldProcess now sets G4Navigator::SetPushVerbosity(false) 
  for the navigator of the parallel world to reduce the warning message
  GeomNav1002.

November 11, 2012, G.Folger (procscore-V09-05-05)
- Adapt to modifications in G4RegularNavigationHelper; this is now a
  real singleton and no longer an utility static class; now accessed
  through G4RegularNavigationHelper::Instance() call; StepLengths is
  accessed by GetStepLengths().
- Avoid to inline functions accessing G4RegularNavigationHelper.
- Addressing run-time errors on Windows when using DLLs.
- Coworks with tag "geomnav-V09-05-40" of geometry/navigation.

October 9, 2012, M.Asai (procscore-V09-05-04)
- Fix a compilation warning.

October 5, 2012, M.Asai (procscore-V09-05-03)
- Introducing "HyperStep" G4Step object owned by G4ParallelWorldProcess, 
  which may possess touchables in pre- and post-step points belonging