@@ -372,7 +372,7 @@ G4double G4ParallelWorldScoringProcess::AlongStepGetPhysicalInteractionLength(
     {
       // Track is on the boundary
       fOnBoundary = true;
-      // proposedSafety = fGhostSafety;
+      // fEndGhostSafety = 0.0;  // Will apply at the end of the step ...
     }
     proposedSafety = fGhostSafety;
     if(eLimited == kUnique || eLimited == kSharedOther) {
