@@ -17,6 +17,17 @@ committal in the CVS repository !
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
 
+January 27, 2016, M. Asai (procscore-V10-00-02)
+- G4ParallelWorldProcess: change processType from fParameterized
+  to fParallel and set the processSubType to 491.
+
+July 13, 2015, A. Dotti
+- Coverity fix #23298
+
+February 12, 2015, J.Apostolakis
+- G4ParallelWorldProcess: verbosity to check Update of fieldtrack
+   (protected with custom flag. )   
+    
 November 20, 2014, M.Asai (procscore-V10-00-01)
 - Coverity fixes.
 
